[project]
name = "ComfyUI-RT-HeartMuLa"
description = "RT HeartMuLa is a powerful suite of multilingual AI music generation nodes for ComfyUI that enables the creation of professional-quality full songs with lyrics directly on your local hardware. Leveraging the advanced HeartMuLa-3B foundation model, HeartCodec, and HeartTranscriptor, these nodes offer a high-fidelity, open-source alternative to cloud-based services for text-to-music and lyrics-to-audio workflows. Designed for creators seeking precise control over song structure and language—supporting English, Chinese, Japanese, Korean, and Spanish—it seamlessly integrates into the ComfyUI ecosystem to provide a state-of-the-art AI audio generation experience."
version = "2.7.3"
license = "Apache-2.0"
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torchtune", "vector_quantize_pytorch", "transformers>=4.45.0", "torchtune>=0.3.0", "einops>=0.8.0", "safetensors>=0.4.0", "sentencepiece>=0.2.0", "accelerate>=1.0.0", "numpy", "protobuf", "omegaconf"]

[project.urls]
Repository = "https://github.com/monnky/ComfyUI-RT-HeartMuLa"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/monnky/ComfyUI-RT-HeartMuLa/wiki"
"Bug Tracker" = "https://github.com/monnky/ComfyUI-RT-HeartMuLa/issues"

[tool.comfy]
PublisherId = "monnky"
DisplayName = "ComfyUI-RT-HeartMuLa"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

