[project]
name = "ComfyUI-RT-HeartMuLa"
description = "RT HeartMuLa is a powerful suite of multilingual AI music generation nodes for ComfyUI that enables the creation of professional-quality full songs with lyrics directly on your local hardware."
version = "1.0.9"
license = {file = "LICENSE"} 
dependencies = ["torchtune>=0.4.0", "torchao>=0.9.0", "soundfile", "vector_quantize_pytorch", "transformers>=4.45.0", "einops>=0.8.0", "safetensors>=0.4.0", "sentencepiece>=0.2.0", "accelerate>=1.0.0", "numpy", "protobuf", "omegaconf"]

[project.urls]
Repository = "https://github.com/monnky/ComfyUI-RT-HeartMuLa"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/monnky/ComfyUI-RT-HeartMuLa/wiki"
"Bug Tracker" = "https://github.com/monnky/ComfyUI-RT-HeartMuLa/issues"

[tool.comfy]
PublisherId = "monnky"
DisplayName = "ComfyUI-RT-HeartMuLa"
Icon = "https://avatars.githubusercontent.com/u/76058285"





